--- a/backend/.env
+++ b/backend/.env
@@ -11,4 +11,4 @@ SMTP_USER=iflorainfopvtltd@gmail.com
 SMTP_PASS=dgasmfotltwpmtov
 
 # Frontend URL for email links
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=http://192.168.29.90:5173
