Add ai summerize for policy

--- a/backend/.env
+++ b/backend/.env
@@ -12,3 +12,4 @@ SMTP_PASS=dgasmfotltwpmtov
 
 # Frontend URL for email links
 FRONTEND_URL=http://192.168.29.90:5173
+GEMINI_API_KEY=AIzaSyBmqmPED2gnkaAFJoOiKMJJ4Ba8J5U1Plw
