--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@jaimilgorajiya/password-utils": "^1.2.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
