--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
-    "pdfkit": "^0.17.2"
+    "pdfkit": "^0.17.2",
+    "twilio": "^5.12.0"
   }
 }
